--- a/analysis/cluster.Rmd
+++ b/analysis/cluster.Rmd
@@ -35,6 +35,11 @@ voom_count= data.filt$GEX$voom_count
 ds. = cosine(voom_count)
 pheatmap(ds.)
 
+af.patients= data.filt$target %>% filter(group== "AF") %>% pull(sampleID)
+ds. = cosine(voom_count[,af.patients])
+pheatmap(ds.)
+
+
 # #eucledian:
 # ds. = dist(t(voom_count))
 # pheatmap(ds.)
@@ -82,24 +87,31 @@ naba_gsets2= do.call(rbind, x) %>%
 all_genesets= rbind(naba_gsets2, prior.k)
 
 #enrich_ 
-.R= decouple(data.filt$GEX$voom_count, network = all_genesets, .source = gene.set, .target = value, statistics = c("gsva")) 
+
+statistics = c("gsva", "scira")
+.R= decouple(data.filt$GEX$voom_count, network = all_genesets, .source = gene.set, .target = value, statistics = statistics, include_time = F) 
 
 #plot contrast AF-CT 
 .R %>% 
   left_join(data.all$target %>% rename(condition= sampleID)) %>% 
   ggplot(.,aes(x=tf, y= score, fill = group))+
+  facet_grid(rows= "statistic")+
   geom_boxplot()+
   theme(axis.text.x = element_text(angle= 60, hjust= 1
   ))
 
 # Identifying AF clusters with NABA scores
-AF.NABA= .R %>% 
-  left_join(data.all$target %>% rename(condition= sampleID)) %>%
-  filter(group == "AF") %>% 
-  select(condition, score, tf) %>%
-  pivot_wider( names_from= condition, values_from = score) %>% column_to_rownames("tf")
-
-pheatmap(AF.NABA)
+map(statistics, function(x){
+  AF.NABA= .R %>%
+    filter(statistic== x)%>%
+    left_join(data.all$target %>% rename(condition= sampleID)) %>%
+    filter(group == "AF") %>% 
+    select(condition, score, tf) %>%
+    pivot_wider( names_from= condition, values_from = score) %>% column_to_rownames("tf")
+  
+  pheatmap(AF.NABA)
+  
+})
 
 ```
 
@@ -110,15 +122,28 @@ samples 1.28, 1-29, 1.26 and 1.27 show high fibrosis and low gene expression of 
 ```{r}
 
 AF.patients= data.filt$target %>% filter(group== "AF") %>% pull(sampleID)
+all.patients=data.filt$target$sampleID 
+cal_z_score <- function(x){
+  (x - mean(x)) / sd(x)
+}
+ 
+plot.heatmap.for.genes= function(gene, patients){
+  x= voom_count[grepl(gene, rownames(voom_count)),patients]
+  data_subset_norm <- t(apply(x, 1, cal_z_score))
 
-x= voom_count[grepl("KCNK", rownames(voom_count)),AF.patients]
-pheatmap(x)
+  pheatmap(data_subset_norm)
+  pheatmap(x)
+}
 
-sort(voom_count["KCNK3",AF.patients])
+plot.heatmap.for.genes("KCNK", all.patients)
+plot.heatmap.for.genes("KCNK", AF.patients)
+
+plot.heatmap.for.genes("ETV", all.patients)
+plot.heatmap.for.genes("ETV", AF.patients)
 ```
 
 
-# now  we will cluster AF patients based on TF activity
+# cluster AF patients based on TF activity
 ```{r message=FALSE, warning=FALSE}
 data= data.filt
 
@@ -141,11 +166,26 @@ regulons.extended = rbind(regulons, dorothea_hs %>% filter(grepl("ETV", tf),
                                                            !confidence %in% c("A", "B","C")) 
 ) %>% mutate(likelihood=1)
 
-##choose mehtod
 
+#### save regulons for inspection:
+ETV_regulons=regulons.extended  %>% filter(grepl("ETV", tf))
+ETV_regilons_list= lapply(unique(ETV_regulons$tf), function(x){ETV_regulons %>% filter(tf == x)})
+names(ETV_regilons_list)= unique(ETV_regulons$tf)
+library(XML)
+WriteXLS::WriteXLS(ETV_regilons_list, ExcelFileName = "output//ETV_regs.xls")
+# now check kcnk3
+dorothea_hs %>% filter(target == "KCNK3") %>% write.csv(., file ="output/KCNK3_potentialTFs.csv")
+
+##choose mehtod
 meth= c("scira", "gsva")
 
-dec.res= decouple(scale(data$GEX$voom_count,center = T, scale = T), network = regulons.extended,statistics = meth, .source =tf, .target = target )
+# perform enrichment:
+dec.res= decouple(scale(data$GEX$voom_count,center = T, scale = T), 
+                  network = regulons.extended,
+                  statistics = meth, 
+                  .source =tf,
+                  .target = target,
+                  include_time = F)
 
 # dec.res= decouple(data$GEX$voom_count, network = regulons.extended,statistics =  c("gsva", "mean", "pscira", "scira", "viper"), .source =tf, .target = target )
 
@@ -166,53 +206,50 @@ pheatmap(dec.res.m[grepl("ETV", rownames(dec.res.m)), ])
 ```
 
  Patients  1.28, 1-29, 1.26 and 1.27  show high ETV4, ETV6, and ETV7 activity. Same patients as in fibrosis analysis
- Careful, some ETV regulons are inferred and might be inacurate. Patient 19_AF is a bit inbetween 
+ Careful, some ETV regulons are inferred and might be less accurate. Patient 19_AF is a bit inbetween 
 
-# Next we will use these tow patient groups of AF to test for clinical variables.
+# Next we will use these two patient groups of AF to test for clinical variables.
 ```{r}
 cluster.fib= c("1.28_AF", "1.29_AF", "1.26_AF","1.27_AF")
 target= data.filt$target
+
 target = target %>% filter(group =="AF") %>% mutate(cluster= ifelse(sampleID %in% cluster.fib, "fibrotic", "non.fibrotic"))
 
-#which(colnames(target) == "AFstage")
+### For categorical data, a chi sqr test is performed om the cluster variable: 
+
 fact.target= target[,37:length(colnames(target))] %>% mutate_all(as.factor) %>% select(-cluster)
 
 test.res= map(colnames(fact.target), function(x){
   #print(x)
   if(length(unique(target[[x]]))>1){
-    test.res= fisher.test(target[[x]], target$cluster)
-    get.it= c(test.res$p.value, test.res$estimate)
-    return(get.it)
+    test.res= chisq.test(target[[x]], target$cluster)
+    
+    #get.it= c(test.res$p.value, test.res$statistic)
+    return(test.res)
   }
   return(NULL)
 })
-
+#test.res[[1]]$statistic
 names(test.res) = colnames(fact.target)
 test.res= do.call(rbind, test.res) 
-colnames(test.res)= c("p.val", "odds.ratio")
-test.res= test.res%>%as.data.frame()  %>% rownames_to_column("feature") %>% as_tibble()  %>%  mutate(logp= -log10(p.val))
-test.res %>% arrange(desc(logp)) %>% print(n=200)
+test.res= test.res%>%as.data.frame()  %>% arrange(p.value) #%>% print(n=200)
 #test.res= fisher.test(x= target$cluster, y= target$CABG)
+print(test.res)
 
 
-
-### now run ANOVas
-
-
+### now run t.test for the continous variables
 cont.target= target[,1:35] %>% select(-sampleID)
 
 ttest.res= map(colnames(cont.target), function(x){
-  #print(x)
   if( is.numeric(target[[x]])){
     fib.samples= target %>% filter(sampleID %in% cluster.fib)
     n.fib=  target %>% filter(!sampleID %in% cluster.fib)
     if(sum(!is.na(fib.samples[[x]]))>2 & sum(!is.na(n.fib[[x]]))>2){
       test.res= t.test( n.fib[[x]], fib.samples[[x]])
       return(c(test.res$statistic, test.res$p.value))
-      #get.it= c(test.res$p.value, test.res$estimate)
       
     }
-    #return(get.it)
+    
   }
   return(NULL)
 })
@@ -221,8 +258,6 @@ ttest.res= do.call(rbind, ttest.res)
 colnames(ttest.res)= c("t", "p.val")
 ttest.res= ttest.res%>%as.data.frame()  %>% rownames_to_column("feature") %>% as_tibble()  %>%  mutate(logp= -log10(p.val))
 ttest.res %>% arrange(desc(logp)) %>% print(n=200)
-#test.res= fisher.test(x= target$cluster, y= target$CABG)
-
-#print(target %>% select(group, cluster, everything()))
 ```
 
+with the proposed tow patient groups, there seems to be no association with meaningful clinical vars. Sample size is probably too limiting
